--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="pl">
 	<head>
 		<meta charset="UTF-8">
-		<title>Projekt</title>
+		<title>Projekt 1333456</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header>
+			<h1>Przykład2323</h1>
 			<nav class="menu">
 				<img class="logo" src="http://via.placeholder.com/250x30">
 				<ul>
@@ -21,306 +22,6 @@
 				</ul>
 			</nav>
 		</header>
-		<section class="hero">
-			<div class="slogan">
-				<h1>Here you can type <br><b>your company <br> slogan</b></h1>	
-			</div>
-		</section>
-		<section class="features">
-			<div class="container2">
-				<div class="row icons">
-					<div class="col-4 col-s-12 search">
-						<i class="fa fa-search"></i>
-						<h3>Research</h3>
-						<p>Vestibulum scelerisque. Duis ante in fermentum ut, condimentum et, accumsan et.</p>
-					</div>
-					<div class="col-4 col-s-12 laptop">
-						<i class="fa fa-laptop"></i>
-						<h3>Fully castomizable</h3>
-						<p>Vestibulum scelerisque. Duis ante in fermentum ut, condimentum et, accumsan et.</p>
-					</div>
-					<div class="col-4 col-s-12 cogs">
-						<i class="fa fa-cogs"></i>
-						<h3>Work and work</h3>
-						<p>Vestibulum scelerisque. Duis ante in fermentum ut, condimentum et, accumsan et.</p>
-					</div>				
-				</div>
-			</div>			
-		</section>
-		<section class="featured_works">
-			<h1> Featured works</h1>
-			<p>Sterczały wkoło obracał ostróżne. Gdy się zdawał małpą lub papugą w ziemstwie i mały z Francuzem gada pije wódkę. wtenczas małe dziecię, kiedy miał za stołem siadał i były rączki, co dzień powszedni. Nóżek, choć stryj nie przerywał ale szerzej niż się małą wieś, a wszystko oddychało.</p>
-		</section>
-		<section class="gallery">
-			<div class="container3">
-				<div class="row gallery-1">
-					<div class="col-2 col-s-6">
-						<div class="layer">
-							<i class="fa fa-link"></i>
-							<i class="fa fa-search"></i>
-						</div>
-						<img src="https://images.pexels.com/photos/374710/pexels-photo-374710.jpeg?w=940&h=650&auto=compress&cs=tinysrgb">
-					</div>
-					<div class="col-2 col-s-6">
-						<div class="layer">
-							<i class="fa fa-link"></i>
-							<i class="fa fa-search"></i>
-						</div>
-						<img src="https://images.pexels.com/photos/373912/pexels-photo-373912.jpeg?h=350&auto=compress&cs=tinysrgb">
-					</div>
-					<div class="col-2 col-s-6">
-						<div class="layer">
-							<i class="fa fa-link"></i>
-							<i class="fa fa-search"></i>
-						</div>
-						<img src="https://images.pexels.com/photos/313782/pexels-photo-313782.jpeg?h=350&auto=compress&cs=tinysrgb">
-					</div>
-					<div class="col-2 col-s-6">
-						<div class="layer">
-							<i class="fa fa-link"></i>
-							<i class="fa fa-search"></i>
-						</div>
-						<img src="https://images.pexels.com/photos/2255/black-and-white-city-houses-skyline.jpg?h=350&auto=compress&cs=tinysrgb">
-					</div>
-					<div class="col-4 col-s-12">
-						<div class="layer">
-							<i class="fa fa-link"></i>
-							<i class="fa fa-search"></i>
-						</div>
-						<img src="https://images.pexels.com/photos/533930/pexels-photo-533930.jpeg?h=350&auto=compress&cs=tinysrgb">
-					</div>
-					
-				</div>	
-				<div class="row gallery-2">	
-					<div class="col-4 col-s-12">
-						<div class="layer">
-							<i class="fa fa-link"></i>
-							<i class="fa fa-search"></i>
-						</div>
-						<img src="https://images.pexels.com/photos/533930/pexels-photo-533930.jpeg?h=350&auto=compress&cs=tinysrgb">
-					</div>
-					<div class="col-2 col-s-6">
-						<div class="layer">
-							<i class="fa fa-link"></i>
-							<i class="fa fa-search"></i>
-						</div>
-						<img src="https://images.pexels.com/photos/210158/pexels-photo-210158.jpeg?h=350&auto=compress&cs=tinysrgb">
-					</div>
-					<div class="col-2 col-s-6">
-						<div class="layer">
-							<i class="fa fa-link"></i>
-							<i class="fa fa-search"></i>
-						</div>
-						<img src="https://images.pexels.com/photos/302831/pexels-photo-302831.jpeg?h=350&auto=compress&cs=tinysrgb">
-					</div>
-					<div class="col-2 col-s-6">
-						<div class="layer">
-							<i class="fa fa-link"></i>
-							<i class="fa fa-search"></i>
-						</div>
-						<img src="https://images.pexels.com/photos/227675/pexels-photo-227675.jpeg?h=350&auto=compress&cs=tinysrgb">
-					</div>
-					<div class="col-2 col-s-6">
-						<div class="layer">
-							<i class="fa fa-link"></i>
-							<i class="fa fa-search"></i>
-						</div>
-						<img src="https://images.pexels.com/photos/281502/pexels-photo-281502.jpeg?h=350&auto=compress&cs=tinysrgb">
-				</div>
-			</div>
-		</section>
-		<section class="people">
-			<div class="row persons">
-				<div class="col-3 col-s-12 circle">
-					<div class="circle-employee">
-						<div class="circle-layer"> 
-							<h4>President</h4>
-						</div>
-					</div>
-					<h3>Bobby Smith</h3>				
-				</div>
-				<div class="col-3 col-s-12 circle">
-					<div class="circle-employee">
-						<div class="circle-layer"> 
-							<h4>Vice-President</h4>
-						</div>
-					</div>
-					<h3>John Doe</h3>				
-				</div>
-				<div class="col-3 col-s-12 circle">
-					<div class="circle-employee">
-						<div class="circle-layer"> 
-							<h4>Secretary</h4>
-						</div>
-					</div>
-					<h3>Jane Doe</h3>				
-				</div>
-				<div class="col-3 col-s-12 circle">
-					<div class="circle-employee">
-						<div class="circle-layer"> 
-							<h4>Salesman</h4>
-						</div>
-					</div>
-					<h3>Lilly Ray</h3>				
-				</div>
-			</div>
-		</section>
-		<section class="with_image">
-			<div class="container4">
-				<div class="row row-image">
-					<div class="col-4 tablet1">
-						<div class="tablet-1">
-							<div class="row tablet-1-1">
-								<div class="col-4 col-s-12 little-image img1">
-									<div class="layer1">
-										<i class="fa fa-link"></i>
-									<i class="fa fa-search"></i>
-									</div>
-									<img src="https://images.pexels.com/photos/302831/pexels-photo-302831.jpeg?h=350&auto=compress&cs=tinysrgb">
-								</div>
-								<div class="col-4 col-s-12 little-image img2">
-									<div class="layer1">
-										<i class="fa fa-link"></i>
-										<i class="fa fa-search"></i>
-									</div>
-									<img src="https://images.pexels.com/photos/227675/pexels-photo-227675.jpeg?h=350&auto=compress&cs=tinysrgb">
-								</div>
-								<div class="col-4 col-s-12 little-image img3">
-									<div class="layer1">
-										<i class="fa fa-link"></i>
-										<i class="fa fa-search"></i>
-									</div>
-									<img src="https://images.pexels.com/photos/210158/pexels-photo-210158.jpeg?h=350&auto=compress&cs=tinysrgb">
-								</div>
-							</div>
-							<div class="row tablet-1-2">
-								<div class="col-4 little-image img4">
-									<div class="layer1">
-										<i class="fa fa-link"></i>
-									<i class="fa fa-search"></i>
-									</div>
-									<img src="https://images.pexels.com/photos/227675/pexels-photo-227675.jpeg?h=350&auto=compress&cs=tinysrgb">
-								</div>
-								<div class="col-4 little-image img5">
-									<div class="layer1">
-										<i class="fa fa-link"></i>
-										<i class="fa fa-search"></i>
-									</div>
-									<img src="https://images.pexels.com/photos/210158/pexels-photo-210158.jpeg?h=350&auto=compress&cs=tinysrgb">
-								</div>
-								<div class="col-4 little-image img6">
-									<div class="layer1">
-										<i class="fa fa-link"></i>
-										<i class="fa fa-search"></i>
-									</div>
-									<img src="https://images.pexels.com/photos/302831/pexels-photo-302831.jpeg?h=350&auto=compress&cs=tinysrgb">
-								</div>
-							</div>
-								<div class="row tablet-1-3">
-								<div class="col-4 little-image img7">
-									<div class="layer1">
-										<i class="fa fa-link"></i>
-									<i class="fa fa-search"></i>
-									</div>
-									<img src="https://images.pexels.com/photos/210158/pexels-photo-210158.jpeg?h=350&auto=compress&cs=tinysrgb">
-								</div>
-								<div class="col-4 little-image img8">
-									<div class="layer1">
-										<i class="fa fa-link"></i>
-										<i class="fa fa-search"></i>
-									</div>
-									<img src="https://images.pexels.com/photos/302831/pexels-photo-302831.jpeg?h=350&auto=compress&cs=tinysrgb">
-								</div>
-								<div class="col-4 little-image img9">
-									<div class="layer1">
-										<i class="fa fa-link"></i>
-										<i class="fa fa-search"></i>
-									</div>
-									<img src="https://images.pexels.com/photos/227675/pexels-photo-227675.jpeg?h=350&auto=compress&cs=tinysrgb">
-								</div>
-							</div>
-						</div>	
-					</div>
-					<div class="col-5 col-s-12 tablet2">
-					<h1>Your awesome title</h1>
-					<p>Vivamus euismod. Integer aliquam tellus tortor, pretium eget, dignissim massa. Aliquam vel molestie enim. Cras tempus erat. Vestibulum tortor ante ullamcorper eleifend ut, diam. Aenean justo. Praesent dolor. Pellentesque mollis ultrices, dui quis wisi. Sed sed massa. Maecenas elit laoreet commodo, odio nec diam turpis at nulla.  </p>
-					</div>
-					<div class="col-3 col-s-12 tablet3">
-					<p>Vivamus euismod. Integer aliquam tellus tortor, pretium eget, dignissim massa. Aliquam vel molestie enim. Cras tempus erat. Vestibulum tortor ante ullamcorper eleifend ut, diam.  </p>
-					</div>
-				</div>	
-			</div>
-		</section>
-		<section class="numbers">
-			<div class="row numbers1">
-				<div class="col-3 col-s-6 number1">
-						<h1>455</h1>
-						<h4>FOLLOWERS<h4>
-				</div>
-				<div class="col-3 col-s-6 number1">
-						<h1>1991</h1>
-						<h4>SINCE<h4>
-				</div>
-				<div class="col-3 col-s-6 number1">
-						<h1>823</h1>
-						<h4>HAPPY CLIENTS<h4>
-				</div>
-				<div class="col-3 col-s-6 number1">			
-						<h1>923</h1>
-						<h4>PROJECTS<h4>	
-				</div>
-			</div>
-		</section>
-		<footer class="media">
-			<div class="footer1">
-				<div class="row footer1-1">
-					<div class="col-3 col-s-12 about">
-						<h2>About us</h2>
-						<p>Vivamus euismod. Integer aliquam tellus tortor, pretium eget, dignissim massa. Aliquam vel molestie enim. Cras tempus erat. Vestibulum tortor ante ullamcorper eleifend ut, diam. Aenean justo. Praesent dolor. Pellentesque mollis ultrices, dui quis wisi. Sed sed massa. Maecenas elit laoreet commodo, odio nec diam turpis at nulla. </p>
-					</div>	
-					<div class="col-3 col-s-12 get-in">
-						<h2>Get in touch</h2>
-						<div class="row address">
-							<div class="col-4 address1">
-								<h4>Address:</h4>
-							</div>
-							<div class="col-8 address2">
-								<p>66 South Street <br> Window 6 Wonderland</p>
-							</div>
-						</div>
-						<div class="row phone">
-							<div class="col-4 phone1">
-								<h4>Phone:</h4>
-							</div>
-							<div class="col-8 phone2">
-								<p>+ 440 12345678 - Office<br> +440 1234567 - Fax</p>
-							</div>
-						</div>
-						<div class="row email">
-							<div class="col-4 email1">
-								<h4>Email:</h4>
-							</div>
-							<div class="col-8 email2">
-								<p>freepik@sitename.com</p>
-							</div>
-						</div>
-					</div>	
-					<div class="col-3 col-s-12 social">
-						<h2>Social media</h2>
-						<p>Vivamus euismod. Integer aliquam tellus tortor, pretium eget, dignissim massa.</p>
-						<div class="icons">
-							<i class="fa fa-youtube"></i>
-							<i class="fa fa-google-plus"></i>
-							<i class="fa fa-facebook"></i>
-							<i class="fa fa-twitter"></i>
-							<i class="fa fa-instagram"></i>
-						</div>
-					</div>						
-				</div>
-			</div>
-			<div class="footer2">
-				<p>Copyrights 2016</p>
-			</div>
-		</footer>
+		
 	</body>
 </html>
