--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<body>
 		<header>
 			<h1>Przykład2323</h1>
+			<h2>ertyui</h2>
+			<p>wedrt7y8uio</p>
 			<nav class="menu">
 				<img class="logo" src="http://via.placeholder.com/250x30">
 				<ul>
