--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 			<h1>Przykład2323</h1>
 			<h2>ertyui</h2>
 			<p>wedrt7y8uio</p>
+			<p>fghjkl</p>
+			<p>vghjkl</p>
 			<nav class="menu">
 				<img class="logo" src="http://via.placeholder.com/250x30">
 				<ul>
