--- a/index.html
+++ b/index.html
@@ -2,19 +2,13 @@
 <html lang="pl">
 	<head>
 		<meta charset="UTF-8">
-		<title>Projekt 1333456</title>
+		<title>coś tam</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header>
-			<h1>Przykład2323</h1>
-			<h2>ertyui</h2>
-			<p>wedrt7y8uio</p>
-			<p>fghjkl</p>
-			<p>vghjkl</p>
-			<h3>sdfghj</h3>
 			<nav class="menu">
 				<img class="logo" src="http://via.placeholder.com/250x30">
 				<ul>
@@ -26,7 +20,6 @@
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
-		</header>
-		
+		</header>		
 	</body>
 </html>
