--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</nav>
+			<div>
+				<h1>Ala ma kota</h1>
+				<p>kot ma ALę</p>
+			</div>
 		</header>		
 	</body>
 </html>
