--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 				<h1>Ala ma kota</h1>
 				<p>kot ma ALę</p>
 			</div>
-		</header>		
+		</header>	
+		<footer>
+				<p>copyright by X</p>
+		</footer>	
 	</body>
 </html>
