--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 				</ul>
 			</nav>
 			<div>
+				<p>Lorem ipsum</p>
+			</div>
+			<div>
 				<h1>Ala ma kota</h1>
 				<p>kot ma ALę</p>
 			</div>
